file(GLOB test_files "*.cc")
foreach(test_file ${test_files})
    get_filename_component(test_name ${test_file} NAME_WE)
    add_executable(${test_name} ${test_file})
    if(MSVC)
        target_link_libraries(${test_name} PRIVATE systest_static)
    else()
        target_link_libraries(${test_name} PRIVATE systest_static Threads::Threads)
    endif()
    if(CMAKE_BUILD_TYPE MATCHES Debug)
        target_compile_definitions(${test_name} PRIVATE SYSTEMATIC_TESTING_DEBUG_LOG)
    endif()
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()
